kubernetes/apps/security/crowdsec/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: crowdsec
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  hostnames:
    - crowdsec.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: crowdsec-service
          port: 8080
